appId: ${APP_ID}
tags:
  - attendance
  - critical

---

- tapOn:
    point: "30%,96%"
- waitForAnimationToEnd

- takeScreenshot: 04_attendance_screen

- assertNotVisible: "Exception:"
- assertNotVisible: "404"
- assertNotVisible: "null"
