appId: ${APP_ID}
tags:
  - profile
  - b3

---

- tapOn:
    point: "90%,96%"
- waitForAnimationToEnd

- takeScreenshot: 09_profile_screen

- tapOn:
    point: "50%,75%"
- waitForAnimationToEnd

- takeScreenshot: 09_settings_screen

- assertNotVisible: "Exception:"
- assertNotVisible: "e.toString()"
